--- a/firefly/docker-compose.yml
+++ b/firefly/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     restart: always
     volumes:
       - firefly_iii_upload:/var/www/html/storage/upload
-    env_file: .env
+    env_file:
+      - stack.env
     ports:
       - 80:8080
     depends_on:
