--- a/firefly/docker-compose.yml
+++ b/firefly/docker-compose.yml
@@ -6,8 +6,7 @@ services:
     restart: always
     volumes:
       - firefly_iii_upload:/var/www/html/storage/upload
-    env_file:
-      - stack.env
+    env_file: .env
     ports:
       - 80:8080
     depends_on:
